<resources>
    <string name="app_name">MySixDayApplication</string>
    <string name="user">Username</string>
    <string name="soal_satu">Soal Satu</string>
    <string name="soal_dua">Soal Dua</string>
    <string name="soal_tiga">Soal Tiga</string>
    <string name="btn_login">login</string>
    <string name="txt_user">Username</string>
    <string name="txt_pass">Password</string>
    <string name="nama">Nama Lengkap</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="kirim">Kirim</string>
    <string name="kirim_balik">kirim balik</string>
</resources>