<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSatu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soal_satu" />
    <Button
        android:id="@+id/btnDua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soal_dua" />
    <Button
        android:id="@+id/btnTiga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soal_tiga" />

</LinearLayout>